# character

./: .env.example  .gitignore  AUDIT.md  Dockerfile  PROJECT_RULES.md  README.md  deploy.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
.agents/rules/: character.md
.antigravity/: rules.md
.continue/rules/: api-standards.md  cicd-pipeline.md  code-quality.md  project-structure.md
.github/workflows/: ci_cd.yml
config/: character.service  deploy.conf  nginx.conf
docs/: ARCHITECTURE.md  DEVELOPMENT.md  INSTALLATION.md  README.md  USAGE.md  development.md  installation.md  usage.md
src/: __init__.py  config.py  database.py  main.py
src/api/: admin_routes.py  api.py  common.py  setup_routes.py  traits_endpoints.py  user_routes.py
src/models/: character_traits.py  extraction_result.py  user.py
src/services/: auth_service.py  character_store.py  discord_service.py  request_queue.py  traits_extractor.py
src/static/css/: style.css
src/static/js/: admin.js  dashboard.js
src/templates/: admin.html  base.html  dashboard.html  login.html  register.html  setup.html
src/utils/: path_utils.py  url_fetcher.py
tests/: test_character_store.py  test_csrf_prefix.py  test_persistence.py  test_traits_api.py  test_traits_extractor.py  test_url_fetcher.py
