[project]
name = "character"
version = "0.1.0"
description = "Extracteur de traits de caractère utilisant les LLM Hugging Face"
readme = "README.md"
authors = [{ name = "Jack", email = "jack@example.com" }]
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "python-multipart",
    "huggingface-hub",
    "httpx",
    "sqlalchemy",
    "python-jose[cryptography]",
    "jinja2",
    "python-dotenv",
    "bcrypt",
    "pyaml>=26.2.1",
    "fabric>=3.2.2",
    "starlette-csrf>=3.0.0",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "fabric>=3.2.2",
    "flake8>=7.3.0",
    "httpx>=0.28.1",
    "isort>=8.0.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pyyaml>=6.0.3",
]
